Move ok, err, and result types to a separate module in the utils directory.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -13,11 +13,10 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from result import Ok, Err, Result\n",
-    "\n",
     "from benthoscan.registration import PointCloud, PointCloudLoader\n",
     "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger"
+    "from benthoscan.utils.log import logger\n",
+    "from benthoscan.utils.result import Ok, Err, Result"
    ]
   },
   {
