--- a/notebooks/dev_registration.ipynb
+++ b/notebooks/dev_registration.ipynb
@@ -10,20 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7b371dd6-fbf6-4edc-97e7-14179ad28726",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "\n",
@@ -40,8 +30,6 @@
     "import open3d.pipelines.registration as reg\n",
     "import open3d.visualization as vis\n",
     "import open3d.utility as util\n",
-    "\n",
-    "from result import Ok, Err, Result\n",
     "\n",
     "from benthoscan.io import read_toml\n",
     "from benthoscan.runtime import Environment, load_environment\n",
@@ -87,7 +75,8 @@
     "    trace_registration_result,\n",
     ")\n",
     "\n",
-    "from benthoscan.utils.log import logger"
+    "from benthoscan.utils.log import logger\n",
+    "from benthoscan.utils.result import Ok, Err, Result"
    ]
   },
   {
@@ -100,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d9e03428-3e96-4f3c-8a58-5e7df86e3aaa",
    "metadata": {},
    "outputs": [],
@@ -140,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ee3dbb0e-36e2-4f59-8591-dfb566e7ab44",
    "metadata": {},
    "outputs": [],
@@ -172,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "59fa67a2-b3d6-4e51-9967-7df97d9fa2d1",
    "metadata": {},
    "outputs": [],
@@ -216,65 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ed211514-f2a6-4254-adf6-b8b1f4d8ed3d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-05 19:35:00.270\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.271\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.271\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.272\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     13074\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.272\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.44023166543201564\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.272\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09399200949560205\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.272\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9797648244348341\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.273\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 7.08061911 11.81330222 -0.93464597]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.273\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.99268220e-01 -3.81614164e-02 -2.59422206e-03]\n",
-      " [ 3.81616991e-02  9.99271575e-01  5.95083821e-05]\n",
-      " [ 2.59006144e-03 -1.58464757e-04  9.99996633e-01]]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:00.273\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.158\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.159\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.159\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.159\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     6419\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.159\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.48914120246894766\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.160\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.16920910604721245\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.160\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9797648244348338\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.160\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.88739008 11.66115878 -0.90065926]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.161\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 0.99853933 -0.05389389 -0.0038275 ]\n",
-      " [ 0.05389956  0.99854539  0.00139307]\n",
-      " [ 0.00374686 -0.00159734  0.9999917 ]]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:12.161\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.100\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.100\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.101\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.101\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     26025\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.102\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.46967208676977495\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.102\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.09378629809123622\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.102\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9797648244348341\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.103\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.94549124 11.74456107 -0.91852515]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.103\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.98855608e-01 -4.77686390e-02 -2.37319102e-03]\n",
-      " [ 4.77670559e-02  9.98858244e-01 -7.19365917e-04]\n",
-      " [ 2.40484455e-03  6.05182333e-04  9.99996925e-01]]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:24.104\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.123\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m6\u001b[0m - \u001b[1m\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.123\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m7\u001b[0m - \u001b[1mSource:       0\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.124\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m8\u001b[0m - \u001b[1mTarget:       3\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.124\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m9\u001b[0m - \u001b[1mCorresp.:     198150\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.124\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m10\u001b[0m - \u001b[1mFitness:      0.3904879769510604\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.124\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mInlier RMSE:  0.0464003219762883\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.125\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mTrans. scale:    0.9797648244348344\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.125\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m13\u001b[0m - \u001b[1mTrans. trans.:   [ 6.89343637 11.8331563  -0.90179617]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.125\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m14\u001b[0m - \u001b[1mTrans. rot.:     [[ 9.98883425e-01 -4.71638412e-02 -2.73412489e-03]\n",
-      " [ 4.71639990e-02  9.98887159e-01 -6.77095832e-06]\n",
-      " [ 2.73140159e-03 -1.22188866e-04  9.99996262e-01]]\u001b[0m\n",
-      "\u001b[32m2024-08-05 19:35:42.125\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mlog_registration\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from time import time\n",
     "from typing import Optional\n",
