--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -11,10 +11,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from result import Ok, Err, Result\n",
-    "\n",
     "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger"
+    "from benthoscan.utils.log import logger\n",
+    "from benthoscan.utils.result import Ok, Err, Result"
    ]
   },
   {
