--- a/notebooks/stereo_disparity_hitnet.ipynb
+++ b/notebooks/stereo_disparity_hitnet.ipynb
@@ -13,10 +13,9 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from result import Ok, Err, Result\n",
-    "\n",
     "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger"
+    "from benthoscan.utils.log import logger\n",
+    "from benthoscan.utils.result import Ok, Err, Result"
    ]
   },
   {
@@ -109,8 +108,8 @@
     "\n",
     "from benthoscan.io import write_image\n",
     "from benthoscan.geometry.hitnet import (\n",
-    "    HitnetConfig, \n",
-    "    load_hitnet, \n",
+    "    HitnetConfig,\n",
+    "    load_hitnet,\n",
     "    compute_disparity,\n",
     ")\n",
     "from benthoscan.geometry.range_maps import (\n",
