--- a/notebooks/stereo_disparity_filter.ipynb
+++ b/notebooks/stereo_disparity_filter.ipynb
@@ -13,10 +13,9 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from result import Ok, Err, Result\n",
-    "\n",
     "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger"
+    "from benthoscan.utils.log import logger\n",
+    "from benthoscan.utils.result import Ok, Err, Result"
    ]
   },
   {
