--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -13,10 +13,10 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from benthoscan.registration import PointCloud, PointCloudLoader\n",
-    "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger\n",
-    "from benthoscan.utils.result import Ok, Err, Result"
+    "from mynd.registration import PointCloud, PointCloudLoader\n",
+    "from mynd.backends import metashape as backend\n",
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result"
    ]
   },
   {
