--- a/notebooks/dev_registration.ipynb
+++ b/notebooks/dev_registration.ipynb
@@ -31,52 +31,52 @@
     "import open3d.visualization as vis\n",
     "import open3d.utility as util\n",
     "\n",
-    "from benthoscan.io import read_toml\n",
-    "from benthoscan.runtime import Environment, load_environment\n",
+    "from mynd.io import read_toml\n",
+    "from mynd.runtime import Environment, load_environment\n",
     "\n",
-    "from benthoscan.registration import PointCloud, RegistrationResult\n",
-    "from benthoscan.registration import PointCloudLoader, create_point_cloud_loader\n",
-    "from benthoscan.registration import MultiTargetIndex, generate_cascade_indices\n",
+    "from mynd.registration import PointCloud, RegistrationResult\n",
+    "from mynd.registration import PointCloudLoader, create_point_cloud_loader\n",
+    "from mynd.registration import MultiTargetIndex, generate_cascade_indices\n",
     "\n",
-    "from benthoscan.registration import (\n",
+    "from mynd.registration import (\n",
     "    downsample_point_cloud,\n",
     "    estimate_point_cloud_normals,\n",
     ")\n",
     "\n",
-    "from benthoscan.registration import (\n",
+    "from mynd.registration import (\n",
     "    PointCloudProcessor,\n",
     "    GlobalRegistrator,\n",
     "    IncrementalRegistrator,\n",
     ")\n",
-    "from benthoscan.registration import (\n",
+    "from mynd.registration import (\n",
     "    build_point_cloud_processor,\n",
     "    build_feature_registrator,\n",
     "    build_icp_registrator,\n",
     ")\n",
     "\n",
-    "from benthoscan.registration import (\n",
+    "from mynd.registration import (\n",
     "    register_icp,\n",
     "    register_colored_icp,\n",
     "    build_pose_graph,\n",
     "    optimize_pose_graph,\n",
     ")\n",
     "\n",
-    "from benthoscan.registration.pipeline import (\n",
+    "from mynd.registration.pipeline import (\n",
     "    Module,\n",
     "    ModuleList,\n",
     "    apply_registration_modules,\n",
     ")\n",
     "\n",
-    "from benthoscan.spatial import decompose_transformation\n",
+    "from mynd.spatial import decompose_transformation\n",
     "\n",
-    "from benthoscan.visualization import (\n",
+    "from mynd.visualization import (\n",
     "    visualize_registration,\n",
     "    create_subplots,\n",
     "    trace_registration_result,\n",
     ")\n",
     "\n",
-    "from benthoscan.utils.log import logger\n",
-    "from benthoscan.utils.result import Ok, Err, Result"
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result"
    ]
   },
   {
