--- a/notebooks/export_rendered_range_maps.ipynb
+++ b/notebooks/export_rendered_range_maps.ipynb
@@ -11,9 +11,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger\n",
-    "from benthoscan.utils.result import Ok, Err, Result"
+    "from mynd.backends import metashape as backend\n",
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "\n",
     "import benthoscan.io as io\n",
     "\n",
-    "from benthoscan.backends.metashape import (\n",
+    "from mynd.backends.metashape import (\n",
     "    render_range_and_normal_maps,\n",
     "    compute_camera_calibration,\n",
     ")\n",
