--- a/notebooks/stereo_disparity_filter.ipynb
+++ b/notebooks/stereo_disparity_filter.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger\n",
-    "from benthoscan.utils.result import Ok, Err, Result"
+    "from mynd.backends import metashape as backend\n",
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result"
    ]
   },
   {
@@ -195,26 +195,26 @@
     "import tqdm\n",
     "\n",
     "\n",
-    "from benthoscan.backends.metashape.data_types import (\n",
+    "from mynd.backends.metashape.data_types import (\n",
     "    ImagePair,\n",
     "    SensorPair,\n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
     ")\n",
     "\n",
-    "from benthoscan.backends.metashape.camera_helpers import (\n",
+    "from mynd.backends.metashape.camera_helpers import (\n",
     "    compute_camera_calibration,\n",
     "    compute_stereo_calibration,\n",
     "    get_stereo_groups,\n",
     ")\n",
     "\n",
-    "from benthoscan.backends.metashape.image import (\n",
+    "from mynd.backends.metashape.image import (\n",
     "    ImagePairLoader,\n",
     "    image_to_numpy,\n",
     "    generate_image_loaders,\n",
     ")\n",
     "\n",
-    "from benthoscan.geometry.stereo import (\n",
+    "from mynd.geometry.stereo import (\n",
     "    StereoCalibration,\n",
     "    RectificationResult,\n",
     "    compute_stereo_rectification,\n",
@@ -266,7 +266,7 @@
     "\n",
     "import cv2\n",
     "\n",
-    "from benthoscan.utils.log import logger\n",
+    "from mynd.utils.log import logger\n",
     "\n",
     "\n",
     "class WindowHandle(NamedTuple):\n",
