--- a/notebooks/stereo_disparity_hitnet.ipynb
+++ b/notebooks/stereo_disparity_hitnet.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "import Metashape\n",
     "\n",
-    "from benthoscan.backends import metashape as backend\n",
-    "from benthoscan.utils.log import logger\n",
-    "from benthoscan.utils.result import Ok, Err, Result"
+    "from mynd.backends import metashape as backend\n",
+    "from mynd.utils.log import logger\n",
+    "from mynd.utils.result import Ok, Err, Result"
    ]
   },
   {
@@ -37,25 +37,25 @@
     "import plotly.graph_objects as go\n",
     "import tqdm\n",
     "\n",
-    "from benthoscan.data.image import Image, ImagePair\n",
+    "from mynd.data.image import Image, ImagePair\n",
     "\n",
-    "from benthoscan.backends.metashape.data_types import (\n",
+    "from mynd.backends.metashape.data_types import (\n",
     "    SensorPair,\n",
     "    CameraPair,\n",
     "    StereoGroup,\n",
     ")\n",
     "\n",
-    "from benthoscan.backends.metashape.camera_helpers import (\n",
+    "from mynd.backends.metashape.camera_helpers import (\n",
     "    compute_stereo_calibration,\n",
     "    get_stereo_groups,\n",
     ")\n",
     "\n",
-    "from benthoscan.backends.metashape.image_helpers import (\n",
+    "from mynd.backends.metashape.image_helpers import (\n",
     "    ImagePairLoader,\n",
     "    generate_image_loaders,\n",
     ")\n",
     "\n",
-    "from benthoscan.geometry.stereo import (\n",
+    "from mynd.geometry.stereo import (\n",
     "    StereoCalibration,\n",
     "    RectificationResult,\n",
     "    compute_stereo_rectification,\n",
@@ -106,13 +106,13 @@
     "import cv2\n",
     "import tqdm\n",
     "\n",
-    "from benthoscan.io import write_image\n",
-    "from benthoscan.geometry.hitnet import (\n",
+    "from mynd.io import write_image\n",
+    "from mynd.geometry.hitnet import (\n",
     "    HitnetConfig,\n",
     "    load_hitnet,\n",
     "    compute_disparity,\n",
     ")\n",
-    "from benthoscan.geometry.range_maps import (\n",
+    "from mynd.geometry.range_maps import (\n",
     "    compute_range_from_disparity,\n",
     "    compute_normals_from_range,\n",
     ")\n",
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from benthoscan.runtime import Environment, load_environment\n",
+    "from mynd.runtime import Environment, load_environment\n",
     "\n",
     "PATHS: dict[str, Path] = {\n",
     "    \"DOCUMENT_IN\": Path(\n",
