Refactor affine transformation estimation for image pairs, and format code.

--- a/notebooks/dev_inverse_rectification.ipynb
+++ b/notebooks/dev_inverse_rectification.ipynb
@@ -25,7 +25,9 @@
     "from mynd.utils.result import Ok, Err, Result\n",
     "from mynd.runtime import Environment, load_environment\n",
     "\n",
-    "DOCUMENT: Path = Path(\"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\")\n",
+    "DOCUMENT: Path = Path(\n",
+    "    \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
+    ")\n",
     "result: Result[Environment, str] = load_environment()\n",
     "\n",
     "match result:\n",
@@ -91,55 +93,21 @@
     "import mynd.geometry.image_transformations as image\n",
     "import mynd.geometry.stereo as stereo\n",
     "\n",
+    "\n",
     "def generate_stereo_rectification(\n",
     "    chunk: Metashape.Chunk,\n",
     ") -> tuple[RectificationResult, list[ImagePairLoader]]:\n",
     "    \"\"\"Returns rectification results and image loaders for the stereo groups in a Metashape chunk.\"\"\"\n",
     "\n",
-    "    # Backend - Get pairs of sensors and cameras\n",
+    "    # BACKEND - Get pairs of sensors and cameras\n",
     "    group: StereoGroup = get_stereo_groups(chunk)[0]\n",
     "\n",
-    "    # Backend - Compute the stereo calibration for the sensor pair\n",
+    "    # BACKEND - Compute the stereo calibration for the sensor pair\n",
     "    calibration: StereoCalibration = compute_stereo_calibration(group.sensor_pair)\n",
     "\n",
-    "    # Backend - Set up image loaders for all camera pairs\n",
+    "    # BACKEND - Set up image loaders for all camera pairs\n",
     "    image_loaders: list[ImagePairLoader] = generate_image_loaders(group.camera_pairs)\n",
-    "    \n",
     "\n",
-    "\n",
-    "    # TODO: Compute homographies\n",
-    "    homographies: StereoHomography = compute_rectifying_homographies(calibration)\n",
-    "    \n",
-    "    \n",
-    "    # NOTE: Test calculations of distorted image corners\n",
-    "    image_size: tuple[int, int] = (calibration.master.width, calibration.master.height)\n",
-    "    \n",
-    "    old_corners: tuple = stereo._get_image_corners(\n",
-    "        homographies.master,                 # homography\n",
-    "        calibration.master.camera_matrix,    # camera matrix\n",
-    "        image_size,                          # image dimensions - widht, height\n",
-    "        calibration.master.distortion,       # distortion coefficients\n",
-    "    )\n",
-    "\n",
-    "    # NOTE: Test calculations of distorted image corners\n",
-    "    new_corners: ImageCorners = image.get_image_corners(\n",
-    "        homographies.master,\n",
-    "        calibration.master.camera_matrix,\n",
-    "        image_size,\n",
-    "        calibration.master.distortion,\n",
-    "    )\n",
-    "\n",
-    "    logger.info(f\"Old image corners: {old_corners}\")\n",
-    "    logger.info(f\"New image corners: {new_corners}\")\n",
-    "\n",
-    "    \n",
-    "    # TODO: Compute pixel maps\n",
-    "    rectification: RectificationResult = compute_rectifying_pixel_maps(calibration, homographies)\n",
-    "\n",
-    "    # TODO: Compute image corners\n",
-    "    \n",
-    "    \n",
-    "    \n",
     "    # Compute homographies, pixel maps and camera matrices for stereo rectification\n",
     "    rectification: RectificationResult = compute_stereo_rectification(calibration)\n",
     "\n",
@@ -167,8 +135,16 @@
     "import numpy as np\n",
     "import tqdm\n",
     "\n",
-    "from mynd.geometry.image_transformations import PixelMap, invert_pixel_map, remap_image_pixels\n",
-    "from mynd.visualization.image_visualizers import WindowHandle, KeyCode, create_image_visualizer \n",
+    "from mynd.geometry.image_transformations import (\n",
+    "    PixelMap,\n",
+    "    invert_pixel_map,\n",
+    "    remap_image_pixels,\n",
+    ")\n",
+    "from mynd.visualization.image_visualizers import (\n",
+    "    WindowHandle,\n",
+    "    KeyCode,\n",
+    "    create_image_visualizer,\n",
+    ")\n",
     "\n",
     "\n",
     "def update_window(\n",
@@ -183,9 +159,11 @@
     "\n",
     "    callback: Callable = callbacks.get(key)\n",
     "    callback(handle, key)\n",
-    "    \n",
     "\n",
-    "def inspect_rectification_results(rectification: RectificationResult, image_loaders: list[ImagePairLoader]) -> None:\n",
+    "\n",
+    "def inspect_rectification_results(\n",
+    "    rectification: RectificationResult, image_loaders: list[ImagePairLoader]\n",
+    ") -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "\n",
     "    forward_map: PixelMap = rectification.master.pixel_map\n",
@@ -198,7 +176,7 @@
     "    }\n",
     "\n",
     "    for loader in tqdm.tqdm(image_loaders, desc=\"Loading images...\"):\n",
-    "        \n",
+    "\n",
     "        images: ImagePair = loader()\n",
     "\n",
     "        forwarded: Image = remap_image_pixels(images.first, forward_map)\n",
@@ -211,8 +189,8 @@
     "        key: int = cv2.waitKey(0)\n",
     "\n",
     "        callbacks: dict = {\n",
-    "            KeyCode.SPACE: lambda window, key: None, # TODO: Load next\n",
-    "            KeyCode.ESC: lambda window, key: None, # TODO: Quit\n",
+    "            KeyCode.SPACE: lambda window, key: None,  # TODO: Load next\n",
+    "            KeyCode.ESC: lambda window, key: None,  # TODO: Quit\n",
     "        }\n",
     "\n",
     "        # Update window\n",
@@ -224,6 +202,7 @@
     "                break\n",
     "\n",
     "    cv2.destroyAllWindows()\n",
+    "\n",
     "\n",
     "for chunk in target_chunks:\n",
     "    rectification, image_loaders = generate_stereo_rectification(chunk)\n",
