Major refactor of libraries. Move point cloud to geometry library, and move camera related types to camera library.

--- a/notebooks/dev_backend.ipynb
+++ b/notebooks/dev_backend.ipynb
@@ -2,21 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3413621b-2dfc-4485-9d30-20f34fbcb460",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.cache/pypoetry/virtualenvs/mynd-qzh2EXyG-py3.11/lib/python3.11/site-packages/kornia/feature/lightglue.py:44: FutureWarning: `torch.cuda.amp.custom_fwd(args...)` is deprecated. Please use `torch.amp.custom_fwd(args..., device_type='cuda')` instead.\n",
+      "  @torch.cuda.amp.custom_fwd(cast_inputs=torch.float32)\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mynd.backends.metashape.data_types'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mMetashape\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmynd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbackends\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m metashape \u001b[38;5;28;01mas\u001b[39;00m backend\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmynd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlog\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmynd\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresult\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Ok, Err, Result\n",
+      "File \u001b[0;32m~/dev/mynd/src/mynd/backends/metashape/__init__.py:3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"Package that implements the backend for Metashape.\"\"\"\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcamera_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      4\u001b[0m     get_stereo_groups,\n\u001b[1;32m      5\u001b[0m     render_range_and_normal_maps,\n\u001b[1;32m      6\u001b[0m     compute_camera_matrix,\n\u001b[1;32m      7\u001b[0m     compute_distortion_vector,\n\u001b[1;32m      8\u001b[0m     compute_camera_calibration,\n\u001b[1;32m      9\u001b[0m     compute_stereo_extrinsics,\n\u001b[1;32m     10\u001b[0m     compute_stereo_calibration,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_types\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     14\u001b[0m     SensorPair,\n\u001b[1;32m     15\u001b[0m     CameraPair,\n\u001b[1;32m     16\u001b[0m     StereoGroup,\n\u001b[1;32m     17\u001b[0m )\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_image_pair\n",
+      "File \u001b[0;32m~/dev/mynd/src/mynd/backends/metashape/camera_helpers.py:10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstereo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CameraCalibration, StereoCalibration, StereoExtrinsics\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrange_maps\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m compute_normals_from_range\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_types\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SensorPair, CameraPair, StereoGroup\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m convert_image\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_stereo_groups\u001b[39m(chunk: Metashape\u001b[38;5;241m.\u001b[39mChunk) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m[StereoGroup]:\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mynd.backends.metashape.data_types'"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
     "import Metashape\n",
     "\n",
-    "from mynd.registration import PointCloud, PointCloudLoader\n",
     "from mynd.backends import metashape as backend\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21926ea5-69bc-4370-93f9-b8c5daefc61a",
+   "metadata": {},
+   "source": [
+    "### Load document into backend"
    ]
   },
   {
@@ -26,24 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATHS: dict[str, Path] = {\n",
-    "    \"DOCUMENT_IN\": Path(\n",
-    "        \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
-    "    ),\n",
-    "    \"DOCUMENT_OUT\": Path(\n",
-    "        \"/data/kingston_snv_01/acfr_revisits_metashape_projects_test/r23685bc_working_version_saved.psz\"\n",
-    "    ),\n",
-    "    \"CACHE\": Path(\"/home/martin/dev/benthoscan/.cache/\"),\n",
-    "}\n",
+    "DOCUMENT_PATH: Path = Path(\n",
+    "    \"/data/kingston_snv_01/acfr_revisits_metashape_projects/r23685bc_working_version.psz\"\n",
+    ")\n",
     "\n",
-    "result: Result[str, str] = backend.load_project(PATHS.get(\"DOCUMENT_IN\"))\n",
+    "result: Result[str, str] = backend.load_project(DOCUMENT_PATH)\n",
     "match result:\n",
     "    case Ok(message):\n",
     "        logger.info(message)\n",
     "    case Err(message):\n",
-    "        logger.error(message)\n",
-    "\n",
-    "backend.log_internal_data()"
+    "        logger.error(message)"
    ]
   },
   {
@@ -61,83 +82,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
+    "result: Result = backend.camera_services.request_stereo_data()\n",
     "\n",
-    "chunk: Metashape.Chunk = document.chunks[0]\n",
-    "valid_cameras: list[Metashape.Camera] = [\n",
-    "    camera for camera in chunk.cameras if camera.transform\n",
-    "]\n",
+    "data = result.unwrap()\n",
     "\n",
-    "camera: Metashape.Camera = valid_cameras[0]\n",
-    "\n",
-    "logger.info(chunk)\n",
-    "logger.info(camera)\n",
-    "logger.info(camera.sensor)\n",
-    "logger.info(chunk.model)\n",
-    "\n",
-    "range_map: Metashape.Image = camera.chunk.model.renderDepth(\n",
-    "    camera.transform, camera.sensor.calibration, add_alpha=False\n",
-    ")\n",
-    "normal_map: Metashape.Image = camera.chunk.model.renderNormalMap(\n",
-    "    camera.transform, camera.sensor.calibration, add_alpha=False\n",
-    ")\n",
-    "\n",
-    "for image in [range_map, normal_map]:\n",
-    "    logger.info(f\"Channels:      {image.channels}\")\n",
-    "    logger.info(f\"Channel count: {image.cn}\")\n",
-    "    logger.info(f\"Data type:     {image.data_type}\")\n",
-    "    logger.info(\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edf5b22f-436f-48ad-92ea-0cd7761d0da7",
-   "metadata": {},
-   "source": [
-    "### Export dense models from the backend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4d49f1f-4a5f-4ce0-bc6c-f137d0f71ee3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "export_point_clouds: bool = False\n",
-    "\n",
-    "if export_point_clouds:\n",
-    "    PointCloudLoaders = dict[int, PointCloudLoader]\n",
-    "\n",
-    "    result: Result[PointCloudLoaders, str] = backend.request_dense_models(\n",
-    "        PATHS[\"CACHE\"], overwrite=True\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "04bf9e58-3ca6-4007-86f5-521392550f0c",
-   "metadata": {},
-   "source": [
-    "### Test stereo depth estimation on camera pairs from Metashape chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0755b9b-6c17-4266-961c-e7745e3a536c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "document: Metashape.Document = backend.context._backend_data.get(\"document\")\n",
-    "\n",
-    "target_labels: list[str] = [\"r23685bc_20100605_021022\"]\n",
-    "target_chunks: list[Metashape.Chunk] = [\n",
-    "    chunk for chunk in document.chunks if chunk.label in target_labels\n",
-    "]\n",
-    "\n",
-    "\n",
-    "output_root: Path = Path(\"/data/kingston_snv_01/rendered_range_maps\")"
+    "for key, stereo_groups in data.items():\n",
+    "    logger.info(f\"Key: {key}, group count: {len(stereo_groups)}\")"
    ]
   }
  ],
